Update 'd4ykvqx5k-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:b4b76fbabaa4cc5ef203a575e5687b48461c9014@sha256:781977efe4a7239d6593f866ee3ff2c86c64af4119f051ccf6a5f71f3dc82ffb

--- a/components/d4ykvqx5k-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/d4ykvqx5k-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: d4ykvqx5k-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:b4b76fbabaa4cc5ef203a575e5687b48461c9014@sha256:781977efe4a7239d6593f866ee3ff2c86c64af4119f051ccf6a5f71f3dc82ffb
+          name: container-image
